--- a/app/views/shared/_noa-animated-image.html.erb
+++ b/app/views/shared/_noa-animated-image.html.erb
@@ -1,7 +1,7 @@
 <figure class="image-effect">
   <div class="container-image">
     <!-- Expanded image -->
-    <img id="expandedImg" style="width:100%">
+    <img id="noa-expanded-img" style="width:100%">
 
     <!-- Image text -->
     <div id="imgtext"></div>
