--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Léo Chaput</h1>
-<h2>Développeur web fullstack</h2>
+<div id="text">
+  <h1>Léo Chaput</h1>
+  <br>
+  <h2>Développeur web fullstack</h2>
+</div>
