refacto of js code

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,4 @@
-<div id="text">
-  <h1>Léo Chaput</h1>
-  <br>
-  <h2>Développeur web fullstack</h2>
+<div>
+  <h1 id="title">Léo Chaput</h1>
+  <h2 id="subhead">Développeur web fullstack</h2>
 </div>
