--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,11 @@
-.navbar-lewagon {
-  justify-content: space-between;
-  background: white;
-}
-
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
-}
-
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+.navbar {
+  display: flex;
+  justify-content: center;
+  top: 2em;
+  a {
+    margin: 0 1em;
+    color: #c06c84;
+    text-decoration: none;
+    font-size: 1.2em;
+  }
 }
