--- a/app/assets/stylesheets/components/_title-homepage.scss
+++ b/app/assets/stylesheets/components/_title-homepage.scss
@@ -1,23 +1,14 @@
-$background: #efefef;
-$primary_font: 'Fredoka One', sans-serif;
-$first_color: rgba(0, 0, 255, 0.5);
-$second_color: rgba(255, 0, 0, 0.5);
+$primary_font: "Merriweather", "Helvetica", "sans-serif";
+$first_color: rgba(192, 108, 132, 0.5);
+$second_color: rgba(0, 108, 132, 0.5);
 
-html, body {
-  background-color: $background;
-  width: 100%;
-  height: 100%;
-  padding: 0;
-  margin: 0;
-}
-
-#text {
+#title, #subhead {
   font-family: $primary_font;
-  font-size: 6em;
+  font-size: 2em;
   line-height: 1em;
-  text-align: center;
   position: relative;
-  top: 50%;
+  top: 50vh;
+  left: 15vw;
   transform: translateY(-50%);
   &:hover {
     cursor: default;
