--- a/app/views/pages/projets.html.erb
+++ b/app/views/pages/projets.html.erb
@@ -7,20 +7,19 @@
 
   <div class="row columns">
     <div class="column">
-      <%= image_tag "noa1.png", class:"d-block photos-carousel", alt:"Plat", id:"noa-first-expanded-image", onclick:"noaFunctionDisplay(this);" %>
+      <%= image_tag "noa1.png", class:"d-block photos-carousel", alt:"Plat", id:"noa-first-expanded-image", onclick:"functionDisplay(this, 'noa-expanded-img');" %>
     </div>
     <div class="column">
-      <%= image_tag "noa2.png", class:"d-block photos-carousel", alt:"Plat", onclick:"noaFunctionDisplay(this);" %>
+      <%= image_tag "noa2.png", class:"d-block photos-carousel", alt:"Plat", onclick:"functionDisplay(this, 'noa-expanded-img');" %>
     </div>
     <div class="column">
-      <%= image_tag "noa3.png", class:"d-block photos-carousel", alt:"Plat", onclick:"noaFunctionDisplay(this);" %>
+      <%= image_tag "noa3.png", class:"d-block photos-carousel", alt:"Plat", onclick:"functionDisplay(this, 'noa-expanded-img');" %>
     </div>
     <div class="column">
-      <%= image_tag "noa4.png", class:"d-block photos-carousel", alt:"Plat", onclick:"noaFunctionDisplay(this);" %>
+      <%= image_tag "noa4.png", class:"d-block photos-carousel", alt:"Plat", onclick:"functionDisplay(this, 'noa-expanded-img');" %>
     </div>
   </div>
 
-  <br>
   <br>
   <br>
   <br>
@@ -29,53 +28,16 @@
 
   <div class="row columns">
     <div class="column">
-      <%= image_tag "hplace1.png", class:"d-block photos-carousel", alt:"Plat", id:"hplace-first-expanded-image", onclick:"hplaceFunctionDisplay(this);" %>
+      <%= image_tag "hplace1.png", class:"d-block photos-carousel", alt:"Plat", id:"hplace-first-expanded-image", onclick:"functionDisplay(this, 'hplace-expanded-img');" %>
     </div>
     <div class="column">
-      <%= image_tag "hplace2.png", class:"d-block photos-carousel", alt:"Plat", onclick:"hplaceFunctionDisplay(this);" %>
+      <%= image_tag "hplace2.png", class:"d-block photos-carousel", alt:"Plat", onclick:"functionDisplay(this, 'hplace-expanded-img');" %>
     </div>
     <div class="column">
-      <%= image_tag "hplace3.png", class:"d-block photos-carousel", alt:"Plat", onclick:"hplaceFunctionDisplay(this);" %>
+      <%= image_tag "hplace3.png", class:"d-block photos-carousel", alt:"Plat", onclick:"functionDisplay(this, 'hplace-expanded-img');" %>
     </div>
     <div class="column">
-      <%= image_tag "hplace4.png", class:"d-block photos-carousel", alt:"Plat", onclick:"hplaceFunctionDisplay(this);" %>
+      <%= image_tag "hplace4.png", class:"d-block photos-carousel", alt:"Plat", onclick:"functionDisplay(this, 'hplace-expanded-img');" %>
     </div>
   </div>
 </div>
-
-
-
-<script>
-  function noaFunctionDisplay(imgs) {
-    // Get the expanded image
-    var expandImg = document.getElementById("noa-expanded-img");
-    // Get the image text
-    var imgText = document.getElementById("imgtext");
-    // Use the same src in the expanded image as the image being clicked on from the grid
-    expandImg.src = imgs.src;
-    // Use the value of the alt attribute of the clickable image as text inside the expanded image
-    imgText.innerHTML = imgs.alt;
-    // Show the container element (hidden with CSS)
-    expandImg.parentElement.style.display = "block";
-  }
-
-  var noaFirstExpand = document.getElementById("noa-first-expanded-image");
-  noaFunctionDisplay(noaFirstExpand);
-
-  function hplaceFunctionDisplay(imgs) {
-    // Get the expanded image
-    var expandImg = document.getElementById("hplace-expanded-img");
-    // Get the image text
-    var imgText = document.getElementById("imgtext");
-    // Use the same src in the expanded image as the image being clicked on from the grid
-    expandImg.src = imgs.src;
-    // Use the value of the alt attribute of the clickable image as text inside the expanded image
-    imgText.innerHTML = imgs.alt;
-    // Show the container element (hidden with CSS)
-    expandImg.parentElement.style.display = "block";
-  }
-
-  var hplaceFirstExpand = document.getElementById("hplace-first-expanded-image");
-  hplaceFunctionDisplay(hplaceFirstExpand);
-
-</script>
