--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,2 +1,4 @@
-<%= link_to "Projets", projets_path %>
-<%= link_to "Contact", contact_path %>
+<div class="navbar">
+  <%= link_to "Projets", projets_path %>
+  <%= link_to "Contact", contact_path %>
+</div>
