--- a/app/assets/stylesheets/components/_animated-image.scss
+++ b/app/assets/stylesheets/components/_animated-image.scss
@@ -1,16 +1,18 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:400,700);
-@import url(https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
 .image-effect {
-  font-family: 'Lato', Arial, sans-serif;
+  max-width: 900px;
+  display: block;
+  margin: 0px auto 10px;
   position: relative;
   overflow: hidden;
-  margin: 10px;
   width: 100%;
   color: #fff;
   text-align: center;
   font-size: 16px;
   background-color: #000000;
   line-height: 1.5em;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  border-radius: 5px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
 .image-effect *,
 .image-effect *:before,
