--- a/app/assets/stylesheets/pages/_projets.scss
+++ b/app/assets/stylesheets/pages/_projets.scss
@@ -2,6 +2,8 @@
 .columns {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 16px;
+  margin-bottom: 90px;
 }
 
 /* Style the images inside the grid */
@@ -10,7 +12,7 @@
   background-size: cover;
   background-position: center;
   justify-content: center;
-  width: 90%;
+  width: 100%;
   align-items: center;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   border-radius: 5px;
