creation of the contact page and of the color change with mouseover

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,3 +5,6 @@
 @import "animated-image";
 @import "title-homepage";
 @import "pretty-underline";
+@import "about";
+@import "contact";
+@import "skills";
