--- a/app/views/pages/projets.html.erb
+++ b/app/views/pages/projets.html.erb
@@ -1,7 +1,5 @@
 <div class="container">
-
-  <h1>Projets</h1>
-  <br>
+  <h1 id="projet-title">conception, design, développement et production de votre site web</h1>
 
   <%= render 'shared/noa-animated-image' %>
 
