--- a/app/views/shared/_noa-animated-image.html.erb
+++ b/app/views/shared/_noa-animated-image.html.erb
@@ -1,7 +1,11 @@
+<h2 class="project-name">Noa</h2>
 <figure class="image-effect">
   <div class="container-image">
     <!-- Expanded image -->
     <img id="noa-expanded-img" style="width:100%">
+
+    <!-- Image text -->
+    <div id="imgtext" style="display:none;"></div>
   </div>
   <figcaption>
     <h3>Noa</h3>
