--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,7 @@
-<div>
-  <h1 id="title">Léo Chaput</h1>
-  <h2 id="subhead">Développeur web fullstack</h2>
-</div>
+<body class="body-home">
+  <div>
+    <h1 id="title">Léo Chaput</h1>
+    <h2 id="subhead">Développeur web fullstack</h2>
+  </div>
+
+</body>
