--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
 <div class="navbar">
-  <%= link_to "Projets", projets_path %>
-  <%= link_to "Contact", contact_path %>
+  <%= link_to "Projets", projets_path, class:"navbar-links" %>
+  <%= link_to "Contact", contact_path, class:"navbar-links" %>
 </div>
