--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,15 +1,19 @@
 <div class="container">
   <div class="about-content">
     <div class="about">
-      <h1>Pour un accompagnement de votre site web <span class="underline--magical">de la conception à la production</span></h1>
+      <h1 id="about-title">Pour un accompagnement de votre site web <span class="underline--magical">de la conception à la production</span></h1>
       <h3 class="subheading">À travers la conception, le design, la conception puis la production de votre site web, tout est fait pour que <span class="underline--magical">celui-ci soit une réussite</span></h2>
     </div>
     <div class="competences">
       <h2 class="title-skills">Compétences</h2>
       <div class="all-skills">
         <div class="logo-title">
-          <i id="skill-ico" class="fas fa-code"></i>
-          <p>Ruby on Rails & Ruby</p>
+          <%= image_tag "ruby-on-rails.png", id:"skill-ico", style:"height:30px;width:30px;" %>
+          <p>Ruby on rails</p>
+        </div>
+        <div class="logo-title">
+          <%= image_tag "ruby.png", id:"skill-ico", style:"height:30px;width:30px;" %>
+          <p>Ruby</p>
         </div>
         <div class="logo-title">
           <i id="skill-ico" class="fab fa-js-square"></i>
@@ -40,12 +44,8 @@
           <p>Git & Github</p>
         </div>
         <div class="logo-title">
-          <i id="skill-ico" class="fas fa-file-excel"></i>
-          <p>VBA</p>
-        </div>
-        <div class="logo-title">
-          <i id="skill-ico" class="fab fa-python"></i>
-          <p>Python</p>
+          <%= image_tag "heroku.png", id:"skill-ico", style:"height:30px;width:30px;" %>
+          <p>Heroku</p>
         </div>
       </div>
     </div>
@@ -54,39 +54,9 @@
 <div id="contact-content">
   <div class="container">
     <h2 id="contact-title" class="color-change">Contact</h2>
-    <h2 id="contact-mail" class="color-change">bonjour@leochaput.fr</h2>
-    <i class="fab fa-linkedin contact-icon color-change"></i>
-    <i class="far fa-envelope contact-icon color-change"></i>
+    <h2 id="contact-mail"><a href="mailto:bonjour@leochaput.fr" class="color-change">bonjour@leochaput.fr</a></h2>
+    <a href="https://www.linkedin.com/in/leo-chaput", target="blank"><i class="fab fa-linkedin contact-icon color-change"></i></a>
+    <a href="mailto:bonjour@leochaput.fr"><i class="far fa-envelope contact-icon color-change"></i></i></a>
   </div>
 </div>
 
-
-<script>
-  // Create a HTML div Element called 'page'
-
-var page = document.getElementById('contact-content');
-//Creates variables for x & y for know where our mouse is
-//x is for horizontal values, and y for vertical ones
-var x = 0;
-var y = 0;
-
-
-// Add Event Listener for page. Listens for any mouse movement
-// inside the page element. If found, run function below
-page.addEventListener('mousemove', function(event) {
-  //Takes the mouse movement we listened for and saves it into two variables
-  x = event.clientX;
-  y = event.clientY;
-  rgb = [
-          Math.round(x/page.clientWidth * 255),
-          Math.round(y/page.clientHeight * 255),
-          150
-      ];
-  var titles = document.querySelector('.color-change');
-  //Here we set the background color to the x & y value that the mouse has over the web page. See css part for rgb explaination
-  titles.style.color = 'rgb('+rgb.join(',')+')';
-  //By writing variable + ', ' we combine the value with text to make it write like rgb(x, y, 100); when sent to style part (css)
-  //Adds a text element to the page. It writes out the x & y value
-});
-
-</script>
