--- a/app/assets/stylesheets/components/_skills.scss
+++ b/app/assets/stylesheets/components/_skills.scss
@@ -1,5 +1,4 @@
 .competences {
-  margin-left: 30vw;
   text-align: center;
 }
 
@@ -20,6 +19,8 @@
   grid-template-columns: 1fr 1fr;
   grid-gap: 16px;
   text-align: center;
+  margin-left: 15%;
+  margin-right: 15%;
 }
 
 .logo-title {
