--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
-<body class="body-home">
+<div class="container">
   <div>
     <h1 id="title">Léo Chaput</h1>
     <h2 id="subhead">Développeur web fullstack</h2>
+    <h3 id="description">Conception, design, développement et mise en production de votre site web</h3>
   </div>
-
-</body>
+</div>
