--- a/app/assets/stylesheets/components/_animated-image.scss
+++ b/app/assets/stylesheets/components/_animated-image.scss
@@ -8,7 +8,7 @@
   color: #fff;
   text-align: center;
   font-size: 16px;
-  background-color: #000000;
+  background-color: #eae9e5;
   line-height: 1.5em;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   border-radius: 5px;
