--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   top: 2em;
-  margin-bottom: 4em;
+  margin-bottom: 90px;
   .navbar-links {
     margin: 0 1em;
     color: $bordeaux;
