--- a/app/assets/stylesheets/pages/_projets.scss
+++ b/app/assets/stylesheets/pages/_projets.scss
@@ -38,13 +38,19 @@
 
 #projet-title {
   text-align: center;
-  color: $bordeaux;
+  color: black;
   margin-bottom: 2em;
+  font-size: 2em;
+  width: 70%;
+  margin-left: 15%;
+  margin-right: 15%;
 }
 
 .project-name {
   text-align: center;
-  margin-bottom: 1em;
+  margin-bottom: 0.5em;
+  color: $bordeaux;
+  font-size: 1.5em;
 }
 
 // Smallest device
