--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,12 +1,22 @@
 <div class="container">
   <div class="about-content">
-    <div class="about">
-      <h1 id="about-title">Pour un accompagnement de votre site web <span class="underline--magical">de la conception à la production</span></h1>
-      <h3 class="subheading">À travers la conception, le design, la conception puis la production de votre site web, tout est fait pour que <span class="underline--magical">celui-ci soit une réussite</span></h2>
+    <div class="about-first">
+      <div>
+        <h1 id="about-title">Pour un accompagnemeneb <span class="underline--magical">de la conceptio</span></h1>
+        <h3 class="subheading">À travers la conception, le design, la conception puis la production de votre site web, tout est fait pour que <span class="underline--magical">celui-ci soit une réussite</span></h2>
+      </div>
+      <div></div>
+    </div>
+    <div class="about-second">
+      <div></div>
+      <div>
+        <h2 id="second-title">Pour un accompb <span class="underline--magical">de la conception </span></h1>
+        <h3 class="subheading">À travers la conception, le design, la conception puis la production de votre site web, tout est fait pour que <span class="underline--magical">celui-ci soit une réussite</span></h2>
+      </div>
     </div>
     <div class="competences">
-      <h2 class="title-skills">Compétences</h2>
-      <div class="all-skills">
+      <h2 class="title-skills" data-aos="fade-up">Compétences</h2>
+      <div class="all-skills" data-aos="fade-up">
         <div class="logo-title">
           <%= image_tag "ruby-on-rails.png", id:"skill-ico", style:"height:30px;width:30px;" %>
           <p>Ruby on rails</p>
@@ -53,10 +63,10 @@
 </div>
 <div id="contact-content">
   <div class="container">
-    <h2 id="contact-title" class="color-change">Contact</h2>
-    <h2 id="contact-mail"><a href="mailto:bonjour@leochaput.fr" class="color-change">bonjour@leochaput.fr</a></h2>
+    <h2 id="contact-title" class="color-change" data-aos="fade-up">Contact</h2>
+    <h2 id="contact-mail"><a href="mailto:bonjour@leochaput.fr" class="color-change" data-aos="fade-up">bonjour@leochaput.fr</a></h2>
     <a href="https://www.linkedin.com/in/leo-chaput", target="blank"><i class="fab fa-linkedin contact-icon color-change"></i></a>
-    <a href="mailto:bonjour@leochaput.fr"><i class="far fa-envelope contact-icon color-change"></i></i></a>
+    <a href="mailto:bonjour@leochaput.fr"><i class="far fa-envelope contact-icon color-change"></i></a>
   </div>
 </div>
 
