--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,36 @@
-<div class="container">
+<div class="container repeat">
   <div>
     <h1 id="title">Léo Chaput</h1>
     <h2 id="subhead">Développeur web fullstack</h2>
-    <h3 id="description">Conception, design, développement et mise en production de votre site web</h3>
   </div>
+  <p class="text">
+    <span class="text__first"><span class="text__word">Conception et développement </span><span class="text__first-bg"></span></span>
+    <br>
+    <span class="text__second"><span class="text__word">de votre site web</span><span class="text__second-bg"></span></span>
 </div>
+
+
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js"></script>
+<script>
+  // envelope animation
+  window.onload = function(){
+    var tl = new TimelineLite({delay: 1}),
+      firstBg = document.querySelectorAll('.text__first-bg'),
+      secBg = document.querySelectorAll('.text__second-bg'),
+      word  = document.querySelectorAll('.text__word');
+
+    tl
+      .to(firstBg, 0.2, {scaleX:1})
+      .to(secBg, 0.2, {scaleX:1})
+      .to(word, 0.1, {opacity:1}, "-=0.1")
+      .to(firstBg, 0.2, {scaleX:0})
+      .to(secBg, 0.2, {scaleX:0});
+
+    document.querySelector('.repeat').onclick = function() {tl.restart()};
+  }
+
+
+
+
+
+</script>
