change about the text in contact page

--- a/app/assets/stylesheets/components/_animated-image.scss
+++ b/app/assets/stylesheets/components/_animated-image.scss
@@ -5,7 +5,7 @@
   position: relative;
   overflow: hidden;
   width: 70%;
-  color: #fff;
+  color: black;
   text-align: center;
   font-size: 16px;
   background-color: #eae9e5;
