--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -2,16 +2,16 @@
   <div class="about-content">
     <div class="about-first">
       <div>
-        <h1 id="about-title">Pour un accompagnemeneb <span class="underline--magical">de la conceptio</span></h1>
-        <h3 class="subheading">À travers la conception, le design, la conception puis la production de votre site web, tout est fait pour que <span class="underline--magical">celui-ci soit une réussite</span></h2>
+        <h1 id="about-title">Pour un accompagnemenent <span class="underline--magical">de la conception...</span></h1>
+        <h3 class="subheading">Une aide sur le design, la conception, le développement et la mise en production <span class="underline--magical">de votre site web.</span></h3>
       </div>
       <div></div>
     </div>
     <div class="about-second">
       <div></div>
       <div>
-        <h2 id="second-title">Pour un accompb <span class="underline--magical">de la conception </span></h1>
-        <h3 class="subheading">À travers la conception, le design, la conception puis la production de votre site web, tout est fait pour que <span class="underline--magical">celui-ci soit une réussite</span></h2>
+        <h2 id="second-title">Jusqu'à la mise en <span class="underline--magical">production !</span></h1>
+        <h3 class="subheading">Créez votre site web en toute sérénité. Tout sera mis en place pour que <span class="underline--magical">celui-ci soit une réussite.</span></h3>
       </div>
     </div>
     <div class="competences">
