--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,4 +8,7 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
-$bordeaux: #c06c84;
+$bordeaux: #0042da;
+$dark-gray: #353535;
+$p-gray: #333333;
+$background: #FAFAFA;
