--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="about-content">
+<!--   <div class="about-content">
     <div class="about-first">
       <div>
         <h1 id="about-title">Pour un accompagnemenent <span class="underline--magical">de la conception...</span></h1>
@@ -13,7 +13,27 @@
         <h2 id="second-title">Jusqu'à la mise en <span class="underline--magical">production !</span></h1>
         <h3 class="subheading">Créez votre site web en toute sérénité. Tout sera mis en place pour que <span class="underline--magical">celui-ci soit une réussite.</span></h3>
       </div>
+    </div> -->
+
+
+
+    <div class="container repeat">
+      <div class="about-first" style="display:flex;flex-direction:column;">
+        <span class="text__first"><h1 class="text__word">Pour un accompagnement de la conception...</h1><span class="text__first-bg"></span></span>
+        <span class="text__second"><h2 class="text__word">... jusqu'à la mise en production !</h2><span class="text__second-bg"></span></span>
+        <div></div>
+      </div>
+      <div class="about-second">
+        <div></div>
+        <div>
+          <h3>Une aide sur le design, la conception, le développement et la mise en production de votre site web.</h3>
+          <h3>Créez votre site web en toute sérénité. Tout sera mis en place pour que celui-ci soit une réussite.</h3>
+        </div>
+      </div>
     </div>
+
+
+
     <div class="competences">
       <h2 class="title-skills" data-aos="fade-up">Compétences</h2>
       <div class="all-skills" data-aos="fade-up">
