--- a/app/views/pages/projets.html.erb
+++ b/app/views/pages/projets.html.erb
@@ -1,8 +1,19 @@
+<div class="container repeat">
+  <h1 class="text-projet">
+    <span class="text__first"><span class="text__word">conception, design, développement </span><span class="text__first-bg"></span></span>
+    <br>
+    <span class="text__second"><span class="text__word">et production de votre site web</span><span class="text__second-bg"></span></span>
+  </h1>
+</div>
 <div class="container">
-  <h1 id="projet-title">conception, design, développement et production de votre site web</h1>
-
   <%= render 'shared/noa-animated-image' %>
-
   <%= render 'shared/hplace-animated-image' %>
+</div>
 
+<div class="container">
+  <div class="footer">
+    <span class=copyright>© 2020 chaput - tous droits réservés</span>
+    <a href="https://www.linkedin.com/in/leo-chaput", target="blank"><i class="fab fa-linkedin contact-icon-projet"></i></a>
+    <a href="mailto:bonjour@leochaput.fr"><i class="far fa-envelope contact-icon-projet"></i></a>
+  </div>
 </div>
