--- a/app/views/shared/_hplace-animated-image.html.erb
+++ b/app/views/shared/_hplace-animated-image.html.erb
@@ -8,8 +8,7 @@
     <div id="imgtext" style="display:none;"></div>
   </div>
   <figcaption>
-    <h3>HPlace</h3>
-    <p>A mobile application developed in 10 days during Le wagon bootcamp. Hplace is a social network for seriously ill people in order to organize, participate to event in their hospital. HPlace has for goal to improve the quality of life of ill people in hospital in order to fight aigainst loneliness. 🏩 💞</p>
+    <h3>HPlace<span>A mobile application developed in 10 days during Le wagon bootcamp. Hplace is a social network for seriously ill people in order to organize, participate to event in their hospital. HPlace has for goal to improve the quality of life of ill people in hospital in order to fight aigainst loneliness. 🏩 💞</span></h3>
   </figcaption>
   <i class="fas fa-plus"><a href="https://hplace.fun" target="blank"></a></i>
 </figure>
@@ -28,3 +27,4 @@
     <%= image_tag "hplace4.png", class:"d-block photos-carousel", alt:"Plat", onclick:"functionDisplay(this, 'hplace-expanded-img');" %>
   </div>
 </div>
+
