--- a/app/assets/stylesheets/components/_pretty-underline.scss
+++ b/app/assets/stylesheets/components/_pretty-underline.scss
@@ -14,7 +14,7 @@ Start Important Part
 ==================================================*/
 
 .underline--magical {
-  background-image: linear-gradient(to right, rgb(250, 112, 154) 0%, rgb(254, 225, 64) 100%);
+  background-image: linear-gradient(rgb(42, 245, 152) 0%, rgb(0, 66, 218) 100%);
   background-repeat: no-repeat;
   background-size: 100% 0.2em;
   background-position: 0 88%;
@@ -27,3 +27,6 @@ Start Important Part
 /*================================================
 End Important Part
 ==================================================*/
+//linear-gradient(to right, rgb(106, 17, 203) 0%, rgb(37, 117, 252) 100%);
+// rgb(0, 66, 218)
+//linear-gradient(rgb(0, 66, 218) 0%, rgb(0, 158, 253) 100%);
