--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="container repeat">
   <div>
-    <h1 id="title">Léo Chaput</h1>
-    <h2 id="subhead">Développeur web fullstack</h2>
+    <h1 id="title" data-aos="zoom-in" data-aos-duration="2000">Léo Chaput</h1>
+    <h2 id="subhead" data-aos="zoom-in" data-aos-duration="2000">Développeur web fullstack</h2>
   </div>
   <p class="text">
     <span class="text__first"><span class="text__word">Conception et développement </span><span class="text__first-bg"></span></span>
