--- a/app/views/shared/_hplace-animated-image.html.erb
+++ b/app/views/shared/_hplace-animated-image.html.erb
@@ -1,5 +1,5 @@
-<h2 class="project-name">HPlace</h2>
-<figure class="image-effect">
+<h2 class="project-name" data-aos="fade-up">HPlace</h2>
+<figure class="image-effect" data-aos="fade-up">
   <div class="container-image">
     <!-- Expanded image -->
     <img id="hplace-expanded-img" style="width:100%">
@@ -13,7 +13,7 @@
   <i class="fas fa-plus"><a href="https://hplace.fun" target="blank"></a></i>
 </figure>
 
-<div class="row columns">
+<div class="row columns" data-aos="fade-up">
   <div class="column">
     <%= image_tag "hplace11.png", class:"d-block photos-carousel", alt:"Plat", id:"hplace-first-expanded-image", onclick:"functionDisplay(this, 'hplace-expanded-img');" %>
   </div>
