--- a/app/views/shared/_noa-animated-image.html.erb
+++ b/app/views/shared/_noa-animated-image.html.erb
@@ -1,5 +1,5 @@
-<h2 class="project-name">Noa</h2>
-<figure class="image-effect">
+<h2 class="project-name" data-aos="fade-up">Noa</h2>
+<figure class="image-effect" data-aos="fade-up">
   <div class="container-image">
     <!-- Expanded image -->
     <img id="noa-expanded-img" style="width:100%">
@@ -13,7 +13,7 @@
   <i class="fas fa-plus"><a href="https://noa321.herokuapp.com/" target="blank"></a></i>
 </figure>
 
-<div class="row columns">
+<div class="row columns" data-aos="fade-up">
   <div class="column">
     <%= image_tag "noa1.png", class:"d-block photos-carousel", alt:"Plat", id:"noa-first-expanded-image", onclick:"functionDisplay(this, 'noa-expanded-img');" %>
   </div>
