--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
   <div class="about-content">
     <div class="about-first">
       <div>
@@ -32,51 +32,78 @@
       </div>
     </div>
 
+ -->
+<div class="container">
+  <div class="container repeat">
+    <h1 class="text">
+      <span class="text__first"><span class="text__word">Pour un accompagnement de la conception... </span><span class="text__first-bg"></span></span>
+      <br>
+      <span class="text__second"><span class="text__word">... jusqu'à la mise en production !</span><span class="text__second-bg"></span></span>
+    </h1>
+  </div>
+  <div class="container-infos">
+    <h3>Une aide sur le design, la conception, le développement et la mise en production de votre site web.</h3>
+    <h3>Créez votre site web en toute sérénité. Tout est mis en place pour que celui-ci soit une réussite.</h3>
+  </div>
+  <div class="container repeat">
+    <p class="text-projet">
+      <span class="text__first"><span class="text__word">Un design travaillé et responsive </span><span class="text__first-bg"></span></span>
+      <br>
+      <span class="text__second"><span class="text__word">sur tous les supports</span><span class="text__second-bg"></span></span>
+    </p>
+  </div>
+  <a class="photo-link-zoom">
+    <div class="photo-responsive" data-aos="fade-up" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path 'test-responsive.png' %>);">
+    </div>
+  </a>
+
+</div>
 
 
-    <div class="competences">
-      <h2 class="title-skills" data-aos="fade-up">Compétences</h2>
-      <div class="all-skills" data-aos="fade-up">
-        <div class="logo-title">
-          <%= image_tag "ruby-on-rails.png", id:"skill-ico", style:"height:30px;width:30px;" %>
-          <p>Ruby on rails</p>
-        </div>
-        <div class="logo-title">
-          <%= image_tag "ruby.png", id:"skill-ico", style:"height:30px;width:30px;" %>
-          <p>Ruby</p>
-        </div>
-        <div class="logo-title">
-          <i id="skill-ico" class="fab fa-js-square"></i>
-          <p>Javascript ES2015</p>
-        </div>
-        <div class="logo-title">
-          <i id="skill-ico" class="fab fa-html5"></i>
-          <p>HTML</p>
-        </div>
-        <div class="logo-title">
-          <i id="skill-ico" class="fab fa-css3-alt"></i>
-          <p>CSS</p>
-        </div>
-        <div class="logo-title">
-          <i id="skill-ico" class="fas fa-database"></i>
-          <p>PostgreSQL, SQL</p>
-        </div>
-        <div class="logo-title">
-          <%= image_tag "bootstrap.png", id:"skill-ico", style:"height:30px;width:30px;" %>
-          <p>Bootstrap</p>
-        </div>
-        <div class="logo-title">
-          <i id="skill-ico" class="fab fa-react"></i>
-          <p>React</p>
-        </div>
-        <div class="logo-title">
-          <i id="skill-ico" class="fab fa-github-square"></i>
-          <p>Git & Github</p>
-        </div>
-        <div class="logo-title">
-          <%= image_tag "heroku.png", id:"skill-ico", style:"height:30px;width:30px;" %>
-          <p>Heroku</p>
-        </div>
+
+ <div class="container">
+  <div class="competences">
+    <h2 class="title-skills" data-aos="fade-up">Compétences</h2>
+    <div class="all-skills" data-aos="fade-up">
+      <div class="logo-title">
+        <%= image_tag "ruby-on-rails.png", id:"skill-ico", style:"height:30px;width:30px;" %>
+        <p>Ruby on rails</p>
+      </div>
+      <div class="logo-title">
+        <%= image_tag "ruby.png", id:"skill-ico", style:"height:30px;width:30px;" %>
+        <p>Ruby</p>
+      </div>
+      <div class="logo-title">
+        <i id="skill-ico" class="fab fa-js-square"></i>
+        <p>Javascript ES2015</p>
+      </div>
+      <div class="logo-title">
+        <i id="skill-ico" class="fab fa-html5"></i>
+        <p>HTML</p>
+      </div>
+      <div class="logo-title">
+        <i id="skill-ico" class="fab fa-css3-alt"></i>
+        <p>CSS</p>
+      </div>
+      <div class="logo-title">
+        <i id="skill-ico" class="fas fa-database"></i>
+        <p>PostgreSQL, SQL</p>
+      </div>
+      <div class="logo-title">
+        <%= image_tag "bootstrap.png", id:"skill-ico", style:"height:30px;width:30px;" %>
+        <p>Bootstrap</p>
+      </div>
+      <div class="logo-title">
+        <i id="skill-ico" class="fab fa-react"></i>
+        <p>React</p>
+      </div>
+      <div class="logo-title">
+        <i id="skill-ico" class="fab fa-github-square"></i>
+        <p>Git & Github</p>
+      </div>
+      <div class="logo-title">
+        <%= image_tag "heroku.png", id:"skill-ico", style:"height:30px;width:30px;" %>
+        <p>Heroku</p>
       </div>
     </div>
   </div>
