--- a/app/views/pages/projets.html.erb
+++ b/app/views/pages/projets.html.erb
@@ -13,7 +13,7 @@
 <div class="container">
   <div class="footer">
     <span class=copyright>© 2020 chaput - tous droits réservés</span>
-    <a href="https://www.linkedin.com/in/leo-chaput", target="blank"><i class="fab fa-linkedin contact-icon-projet"></i></a>
-    <a href="mailto:bonjour@leochaput.fr"><i class="far fa-envelope contact-icon-projet"></i></a>
+    <a href="https://www.linkedin.com/in/leo-chaput", target="blank"><i class="fab fa-linkedin contact-icon-projet photo-link-zoom"></i></a>
+    <a href="mailto:bonjour@leochaput.fr"><i class="far fa-envelope contact-icon-projet photo-link-zoom"></i></a>
   </div>
 </div>
