--- a/app/views/shared/_hplace-animated-image.html.erb
+++ b/app/views/shared/_hplace-animated-image.html.erb
@@ -15,16 +15,16 @@
 
 <div class="row columns" data-aos="fade-up">
   <div class="column">
-    <%= image_tag "hplace11.png", class:"d-block photos-carousel", alt:"Plat", id:"hplace-first-expanded-image", onclick:"functionDisplay(this, 'hplace-expanded-img');" %>
+    <%= image_tag "hplace11.png", class:"d-block", alt:"HPlace", id:"hplace-first-expanded-image", onclick:"functionDisplay(this, 'hplace-expanded-img');" %>
   </div>
   <div class="column">
-    <%= image_tag "hplace2.png", class:"d-block photos-carousel", alt:"Plat", onclick:"functionDisplay(this, 'hplace-expanded-img');" %>
+    <%= image_tag "hplace2.png", class:"d-block", alt:"HPlace", onclick:"functionDisplay(this, 'hplace-expanded-img');" %>
   </div>
   <div class="column">
-    <%= image_tag "hplace3.png", class:"d-block photos-carousel", alt:"Plat", onclick:"functionDisplay(this, 'hplace-expanded-img');" %>
+    <%= image_tag "hplace3.png", class:"d-block", alt:"HPlace", onclick:"functionDisplay(this, 'hplace-expanded-img');" %>
   </div>
   <div class="column">
-    <%= image_tag "hplace4.png", class:"d-block photos-carousel", alt:"Plat", onclick:"functionDisplay(this, 'hplace-expanded-img');" %>
+    <%= image_tag "hplace4.png", class:"d-block", alt:"HPlace", onclick:"functionDisplay(this, 'hplace-expanded-img');" %>
   </div>
 </div>
 
